# C--Learning

./: .gitignore  README.md
practice/p1/: CMakeLists.txt
practice/p1/src/: main.cpp
test/aed2/4-lesson/: 2-main.cpp  main.cpp  solution.txt
test/aed2/pratice_exam1/: CMakeLists.txt  main.cpp  test_arrays.cpp  test_arrays.h
test/cmake-test-1/: CMakeLists.txt
thechernovideos/1-v/src/: main.cpp
thechernovideos/10-v/src/: log.cpp  log.h
thechernovideos/17-v/: CMakeLists.txt
thechernovideos/17-v/src/: main.cpp
thechernovideos/2-v/: impthings.txt
thechernovideos/2-v/src/: main.cpp
thechernovideos/20-v/: CMakeLists.txt
thechernovideos/20-v/src/: main.cpp
thechernovideos/22-v/: CMakeLists.txt
thechernovideos/22-v/src/: external_src.cpp  external_src.cpp.h  external_src.h  file1.cpp  file1.h  main.cpp
thechernovideos/23-v/: CMakeLists.txt
thechernovideos/23-v/src/: main.cpp
thechernovideos/25-v/: CMakeLists.txt
thechernovideos/25-v/src/: main.cpp
thechernovideos/v1/: CMakeLists.txt
thechernovideos/v10/src/: main.cpp
thechernovideos/v2/: CMakeLists.txt
thechernovideos/v2/src/: mylogger.cpp
thechernovideos/v3/: CMakeLists.txt
thechernovideos/v8/: CMakeLists.txt
thechernovideos/v8/src/: main.cpp
